# zero2prodRust

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230701234346_create_subscriptions_table.sql  20230802081813_make_status_not_null_in_subscriptions.sql  20230802081921_create_subscription_tokens_table.sql  20230805071013_rename_password_column.sql  20230806175049_seed_user.sql  20230808062231_create_issue_delivery_queue.sql
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
